syntax = "proto3";

option csharp_namespace = "Server";

service Customer {
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
	rpc GetNewCustomers (NewCustomerRequest) returns (stream CustomerModel);
}

message NewCustomerRequest { }

message CustomerLookupModel {
	int32 userId = 1;
}

message CustomerModel {
	int32 userId = 1;
	string firstName = 2;
	string lastName = 3;
	string emailAddress = 4;
	bool isAlive = 5;
	int32 age = 6;
}
